# operating_system-openbsd

./: _.cmake  _.cmake.bak  __.cmake
_seed/vs/: __helloworld.sln
aaa_want_to_remove_include/valgrind/: libvex.h  libvex_guest_amd64.h  libvex_ir.h  pub_tool_basics.h  pub_tool_basics_asm.h  pub_tool_libcsetjmp.h  pub_tool_machine.h
acme_openbsd/: CMakeLists.txt  Makefile  _.cpp  _.h  _factory.cpp  _references.txt  aaa_acme_file.h  aaa_acme_openbsd.h  aaa_dir_system.cpp  aaa_dir_system.h  aaaa_acme_openbsd.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_openbsd.cbp  acme_path.cpp  acme_path.h  cmake_install.cmake  dir_context.cpp  dir_context.h  directory_context.cpp  directory_context.h  directory_system.cpp  directory_system.h  file.cpp.1  file.h.1  file_context.cpp  file_context.h  file_system.cpp  file_system.h  framework.h  node.cpp  node.h  node_processes_identifiers.cpp  node_tell_whether_modules_are_loaded.cpp  path_system.cpp  path_system.h
apex_openbsd/: .node.cpp.kate-swp  .node.h.kate-swp  CMakeLists.txt  Makefile  _.cpp  _.h  _apex_windows.vcxproj  _apex_windows.vcxproj.filters  _apex_windows_vs12.vcxproj  _factory.cpp  _references.txt  a.h  aaa_apex_openbsd.h  aaa_application.cpp  aaa_crypto.cpp  aaa_crypto.h  aaa_factory_exchange1.cpp  aaa_interprocess_communication.cpp  aaa_interprocess_communication.h  aaa_node_windows.h  aaa_os_context.cpp  aaa_os_context.h  aaa_thread.cpp  aaa_trace.cpp  aaa_want_to_remove_handle.cpp  aaa_want_to_remove_handle.h  aaa_want_to_remove_printer.cpp  aaa_want_to_remove_printer.h  aaa_want_to_remove_shell1.cpp  aaa_want_to_remove_simple_hold_handle.h  aaa_windows.h  apex_openbsd.cbp  apex_windows.def  apex_windows.vcxproj  apex_windows.vcxproj.filters  cmake_install.cmake  dir_context.cpp  dir_context.h  dir_system.cpp  dir_system.h  (+19 more)
apex_openbsd/explorer/: explorer_restart.cpp  install_desk_toolbar.cpp
apex_openbsd/kqueue/: file_watcher.cpp
app/: app.cbp  app.cpp  app.vcxproj  clang_app.cbp
app.axis/: app.axis.cbp  app.axis.cpp
audio_alsa/: audio_alsa.cbp
audio_mixer_alsa/: audio_mixer_mmsystem.vcxproj  audio_mixer_mmsystem.vcxproj.filters
aura_openbsd/: CMakeLists.txt  Makefile  _.h  _aura_windows_vs12.vcxproj  _factory.cpp  _references.txt  aaa_graphics.cpp  aaa_process_data.h  aaaa_aura_openbsd.h  appindicator.cpp  appindicator.h  aura_openbsd.cbp  cmake_install.cmake  framework.h  interaction_impl.cpp  interaction_impl.h  node.cpp  node.h
configuration/ffmpeg/: config.h
configuration/port_jpeg/: config.h  jconfig.h
configuration/port_openexr/: config.h
configuration/port_png/: config.h
configuration/port_tiff4/: config.h  tiffconf.h
desktop_environment_gnome/: CMakeLists.txt  Makefile  _.h  aaa_appindicator.h  aaa_gnome_direct.cpp  aaa_notify_icon.h  application.cpp  node.cpp
desktop_environment_gnome/aura/: .gnome_direct.cpp.kate-swp
desktop_environment_gtk_based/: CMakeLists.txt  Makefile  _.h  _factory.cpp  aaa_copydesk.cpp  aaa_gdk.cpp  aaa_monitor.cpp  aaa_notify_icon.h  aaa_user.cpp  cmake_install.cmake  desktop_environment_gnome.cbp  node.cpp  node.h  node_gnome.cbp
desktop_environment_kde/: CMakeLists.txt  _.h  _desktop_environment_kde.h  _factory.cpp  appindicator.h  application.cpp  application.h  copydesk.cpp  gdk.cpp  gnome_direct.cpp  node.cpp  node.h
desktop_environment_kde/aura/: .gnome_direct.cpp.kate-swp  gnome.cpp  gnome_direct.cpp
desktop_environment_xfce/: CMakeLists.txt  _.h  _desktop_environment_xfce.h  _factory.cpp  application.cpp  gdk.cpp  monitor.h  node.cpp  node.h  notify_icon.cpp  notify_icon.h
desktop_environment_xfce/aura/: xfce_direct.cpp
include/configuration_selection/Debug/: configuration_selection.h
include/configuration_selection/Release/: configuration_selection.h
music_midi_alsa/: framework.h  music_midi_alsa.cbp
node_openbsd/: CMakeLists.txt  Makefile  _.h  _factory.cpp  _node_linux.h  aaa_node.cpp  aaa_node.h  aaaa_node_openbsd.h  bitmap.cpp  cmake_install.cmake  framework.h  graphics.cpp  node.cpp  node.h  node_openbsd.cbp
operating-system/openbsd/: package_map.txt
operating_ambient_gtk3/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _references.txt  application.cpp  application.h  copydesk.cpp  framework.h  monitor.cpp  node.cpp  node.h  notify_icon.cpp  user.cpp  user.h  xfce_direct.cpp
operating_ambient_gtk3/aura/: .xfce_direct.cpp.kate-swp  xfce.cpp  xfce.h
operating_ambient_gtk4/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  aaa_application.cpp  aaa_monitor.cpp  aaa_monitor.h  aaa_notify_icon.cpp  aaa_user.h  aaaa_desktop_environment_gnome.h  node.cpp  node.h  node_gnome.cbp
operating_ambient_gtk4/aura/: gnome.cpp  gnome.h  gnome_direct.cpp
operating_ambient_kde6/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  aaa__library.h  aaa_appindicator.h  aaa_application.cpp  aaa_copydesk.cpp  aaa_copydesk.h  aaa_display.cpp  aaa_display.h  aaa_gdk.cpp  aaa_gdk.h  aaa_monitor.cpp  aaa_monitor.h  aaa_notify_icon.cpp  aaa_notify_icon.h  aaa_windowing.cpp  aaa_windowing.h  clipboard_data.h  console.cpp  console.h  deployment.rc  desktop_environment_gnome.cbp  node.cpp  node.h  node_gnome.cbp  user.cpp
operating_system/: _config.h  aaa_want_to_remove_version.h  appconfig.h  clear_cstddef  configuration.h  operating_system.h  system.h  types.h
operating_system/openbsd/gnome/7.5/: package_map.txt
operating_system/openbsd/gnome/7.6/: package_map.txt
operating_system/openbsd/gnome/7.8/: package_map.txt
operating_system/openbsd/kde/7.8/: package_map.txt
operating_system/valgrind/: config.h  libvex_guest_arm.h  libvex_guest_ppc64.h  pub_tool_libcfile.h  pub_tool_redir.h  pub_tool_tooliface.h  pub_tool_vki.h  pub_tool_vkiscnums_asm.h  valgrind.h
os2/: os2.h
sample/: .x.cpp.kate-swp  x.cpp
stage/dynamic_source/: basis_cl64.bash  basis_libc64.bash  memdleak_cl.bash
stage/introjection/resident/: basis_c64.bash  basis_c64_1.bash  basis_cl-log.bash  basis_cl-nolog.bash  basis_cl.bash  basis_cl64.bash  basis_libc.bash  memdleak_cl-log.bash  memdleak_cl-nolog.bash  memdleak_libc.bash
(+2 files in other folders)
